--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Vujahday+Script&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital@1&family=Vujahday+Script&display=swap');
+@import "react-slideshow-image/dist/styles.css";
 
 @tailwind base;
 @tailwind components;
